--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,9 @@ if(WIN32)
 	set(CMAKE_SHARED_LIBRARY_PREFIX "")
 endif()
 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	add_definitions(-D_CRT_SECURE_NO_WARNINGS=1)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+endif()
+
 add_subdirectory(Sources)
