--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -16,12 +16,24 @@
       "name": "x64-Release",
       "generator": "Ninja",
       "configurationType": "Release",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${workspaceRoot}\\Build\\${name}",
       "installRoot": "${workspaceRoot}\\Build\\install\\${name}",
-      "cmakeCommandArgs": "",
+      "cmakeCommandArgs": "/MP /p:BuildInParallel",
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
+      "variables": []
+    },
+    {
+      "name": "x64-RelWithDebInfo",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
       "inheritEnvironments": [ "msvc_x64_x64" ],
+      "buildRoot": "${workspaceRoot}\\Build\\${name}",
+      "installRoot": "${workspaceRoot}\\Build\\install\\${name}",
+      "cmakeCommandArgs": "/MP /p:BuildInParallel",
+      "buildCommandArgs": "-v",
+      "ctestCommandArgs": "",
       "variables": []
     }
   ]
