--- a/Lib/CMakeLists.txt
+++ b/Lib/CMakeLists.txt
@@ -1,11 +1,13 @@
-file(GLOB_RECURSE SERIAL_HEADER_FILES ".h" "*.hpp")
-file(GLOB_RECURSE SERIAL_SOURCE_FILES ".c" "*.cpp")
-set(SERIAL_SOURCES
-		${SERIAL_HEADER_FILES}
-		${SERIAL_SOURCE_FILES}
+file(GLOB_RECURSE SERIAL_HEADER_FILES
+		RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
+		".h" "*.hpp" "*.inl"
+		)
+file(GLOB_RECURSE SERIAL_SOURCE_FILES
+		RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
+		".c" "*.cpp"
 		)
 
-add_library(Serial STATIC ${SERIAL_SOURCES})
+add_library(Serial STATIC ${SERIAL_HEADER_FILES} ${SERIAL_SOURCE_FILES})
 
 target_compile_features(Serial PUBLIC cxx_std_17)
 target_include_directories(Serial PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
